feature[TW28886]: Extend Template To Include Markdown Content And Pre Render TOC For MD Publish
Change-Id: I50fb7166ab2bd18e746dfa871a9898ea2573f70c